--- a/css/campingsuedtirol.css
+++ b/css/campingsuedtirol.css
@@ -351,7 +351,7 @@ a.ui-link-inherit {
 .ui-icon-searchfield:after {
 	background: #000000 /*{global-icon-color}*/;
 	background: transparent /*{global-icon-disc}*/;
-	background-image: url(../images/icons-18-white.png) /*{global-icon-set}*/;
+	background-image: url(images/icons-18-white.png) /*{global-icon-set}*/;
 	background-repeat: no-repeat;
 	-webkit-border-radius: 				9px;
 	border-radius: 						9px;
@@ -362,7 +362,7 @@ a.ui-link-inherit {
 .ui-icon-alt .ui-icon-searchfield:after {
 	background-color: 						#fff;
 	background-color: 						rgba(255,255,255,.3);
-	background-image: url(../images/icons-18-black.png);
+	background-image: url(images/icons-18-black.png);
 	background-repeat: no-repeat;
 }
 /* No disc
@@ -467,14 +467,14 @@ a.ui-link-inherit {
 	.ui-icon-grid, .ui-icon-star, .ui-icon-alert, .ui-icon-info, .ui-icon-home, .ui-icon-bars, .ui-icon-edit,
 	.ui-icon-search, .ui-icon-searchfield:after, 
 	.ui-icon-checkbox-off, .ui-icon-checkbox-on, .ui-icon-radio-off, .ui-icon-radio-on {
-		background-image: url(../images/icons-36-white.png);
+		background-image: url(images/icons-36-white.png);
 		-moz-background-size: 864px 18px;
 		-o-background-size: 864px 18px;
 		-webkit-background-size: 864px 18px;
 		background-size: 864px 18px;
 	}
 	.ui-icon-alt .ui-icon {
-		background-image: url(../images/icons-36-black.png);
+		background-image: url(images/icons-36-black.png);
 	}
 	.ui-icon-plus {
 		background-position: 	0 50%;
@@ -566,7 +566,7 @@ a.ui-link-inherit {
 }
 /* loading icon */
 .ui-icon-loading {
-	background: url(../images/ajax-loader.gif);
+	background: url(images/ajax-loader.gif);
 	background-size: 46px 46px;
 }
 
@@ -637,7 +637,7 @@ a.ui-link-inherit {
 .ui-icon-searchfield:after {
 	background: #000000 /*{global-icon-color}*/;
 	background: transparent /*{global-icon-disc}*/;
-	background-image: url(../images/icons-18-white.png) /*{global-icon-set}*/;
+	background-image: url(images/icons-18-white.png) /*{global-icon-set}*/;
 	background-repeat: no-repeat;
 	-webkit-border-radius: 				9px;
 	border-radius: 						9px;
@@ -648,7 +648,7 @@ a.ui-link-inherit {
 .ui-icon-alt .ui-icon-searchfield:after {
 	background-color: 						#fff;
 	background-color: 						rgba(255,255,255,.3);
-	background-image: url(../images/icons-18-black.png);
+	background-image: url(images/icons-18-black.png);
 	background-repeat: no-repeat;
 }
 /* No disc
@@ -753,14 +753,14 @@ a.ui-link-inherit {
 	.ui-icon-grid, .ui-icon-star, .ui-icon-alert, .ui-icon-info, .ui-icon-home, .ui-icon-bars, .ui-icon-edit,
 	.ui-icon-search, .ui-icon-searchfield:after, 
 	.ui-icon-checkbox-off, .ui-icon-checkbox-on, .ui-icon-radio-off, .ui-icon-radio-on {
-		background-image: url(../images/icons-36-white.png);
+		background-image: url(images/icons-36-white.png);
 		-moz-background-size: 864px 18px;
 		-o-background-size: 864px 18px;
 		-webkit-background-size: 864px 18px;
 		background-size: 864px 18px;
 	}
 	.ui-icon-alt .ui-icon {
-		background-image: url(../images/icons-36-black.png);
+		background-image: url(images/icons-36-black.png);
 	}
 	.ui-icon-plus {
 		background-position: 	0 50%;
@@ -852,7 +852,7 @@ a.ui-link-inherit {
 }
 /* loading icon */
 .ui-icon-loading {
-	background: url(../images/ajax-loader.gif);
+	background: url(images/ajax-loader.gif);
 	background-size: 46px 46px;
 }
 /* Button corner class
