--- a/styles/main.css
+++ b/styles/main.css
@@ -36,3 +36,10 @@ html {
     bottom:0;
     margin:auto;
 }
+
+.ui-btn.my-tooltip-btn,
+.ui-btn.my-tooltip-btn:hover,
+.ui-btn.my-tooltip-btn:active {
+    background: none;
+    border: 0;
+}
